--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
   install:
     commands:
       - echo "Installing SnowSQL CLI..."
-      - curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_64/snowsql-1.2.22-linux_x86_64.bash
+      - curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.32-linux_x86_64.bash
       - SNOWSQL_DEST=./snowsql_install bash snowsql-1.2.22-linux_x86_64.bash -y
       - export PATH=$PATH:./snowsql_install/bin
       - echo "SnowSQL CLI installed."
