--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,8 +26,7 @@ phases:
       - cd
       - pwd
       - ls -a 
-      - mkdir /home/snowflake
-      - WORKDIR /home/snowflake
+      # - WORKDIR /home/snowflake
 
       - echo "Downloading SnowSQL CLI installer..."
       # Using the specific version 1.2.32 as per your previous log.
@@ -42,14 +41,15 @@ phases:
 
       - echo "Executing SnowSQL CLI installer..."
       # Set SNOWSQL_DEST as an environment variable for the bash command
-      - export SNOWSQL_DEST=/home/snowflake
-      - export SNOWSQL_LOGIN_SHELL=/home/snowflake/.bashrc
+      - export SNOWSQL_DEST=./snowsql_install
+      - export SNOWSQL_LOGIN_SHELL=./snowsql_install/.bashrc
+      - ls -a
       - bash snowsql-1.2.32-linux_x86_64.bash
 
       # - SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.2.32-linux_x86_64.bash
       # - bash "${SNOWSQL_INSTALLER_FILENAME}" -y
       
-      # - export PATH=$PATH:./snowsql_install/bin
+      - export PATH=$PATH:./snowsql_install/bin
       - ls /home/snowflake
       - export PATH=$PATH:/home/snowflake/snowsql/bin
       - echo "SnowSQL CLI installed."
