--- a/buildspec.yml
+++ b/buildspec.yml
@@ -45,13 +45,13 @@ phases:
       - export SNOWSQL_LOGIN_SHELL=/dev/null
       - ls -a
       - bash snowsql-1.2.32-linux_x86_64.bash -y
-      - cd ./snowsql_install
+      - cd ./snowsql_install/snowsql
       - ls -a
 
       # - SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.2.32-linux_x86_64.bash
       # - bash "${SNOWSQL_INSTALLER_FILENAME}" -y
       
-      - export PATH=$PATH:./snowsql_install/bin
+      - export PATH=$PATH:./snowsql_install/snowsql/bin
       - ls -a 
       # - export PATH=$PATH:/home/snowflake/snowsql/bin
       - echo "SnowSQL CLI installed."
