--- a/buildspec.yml
+++ b/buildspec.yml
@@ -50,7 +50,7 @@ phases:
 
       - echo "$PRIVATE_KEY_CONTENT_VAR" > /tmp/snowflake_private_key.p8
       - chmod 400 /tmp/snowflake_private_key.p8
-      - export SNOWSQL_PRIVATE_KEY_PASSPHRASE="$PRIVATE_KEY_PASSPHRASE_VAR"
+      - export SNOWSQL_PRIVATE_KEY_PASSPHRASE=$PRIVATE_KEY_PASSPHRASE_VAR
 
       - snowsql -a $SNOWFLAKE_ACCOUNT -u $SNOWFLAKE_USER -r $SNOWFLAKE_ROLE -w $SNOWFLAKE_WAREHOUSE -d $SNOWFLAKE_DATABASE -s $SNOWFLAKE_SCHEMA --private-key-path /tmp/snowflake_private_key.p8 -q "ALTER GIT REPOSITORY $SNOWFLAKE_GIT_STAGE FETCH;"
 
