--- a/buildspec.yml
+++ b/buildspec.yml
@@ -50,8 +50,8 @@ phases:
 
       - echo "$PRIVATE_KEY_CONTENT_VAR" > ./aes_private_key.p8
       - chmod 400 ./aes_private_key.p8
-      - export SNOWSQL_PRIVATE_KEY_PASSPHRASE=$PRIVATE_KEY_PASSPHRASE_VAR
-      
+      - export SNOWSQL_PRIVATE_KEY_PASSPHRASE=123
+
       - echo ./aes_private_key.p8
       - echo $PRIVATE_KEY_CONTENT_VAR
       - echo $SNOWSQL_PRIVATE_KEY_PASSPHRASE
